+ Блок Новости в заголовке и в заголовках новостей шрифты чуть жирнее https://clip2net.com/s/3XyIfqF
+ Главная страницу кнопка Авиабилеты сделать как в дизайне щас какие то большие очень буквы https://clip2net.com/s/3XyMzlY

+/- НОВОЕ в блогах в дизайне так https://clip2net.com/s/3XyP2mN   а у вас так https://clip2net.com/s/3XyPapT

--- a/src/articles.html
+++ b/src/articles.html
@@ -320,7 +320,7 @@
                                             <div class="uk-card-media-top uk-margin-bottom">
                                                 <img src="images/article_collage_content_2.jpg" alt="" class="uk-width-1-1">
                                             </div>
-                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку доспехов</a>
+                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                             <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
@@ -366,7 +366,7 @@
                                             <div class="uk-card-media-top uk-margin-bottom">
                                                 <img src="images/article_collage_content_4.jpg" alt="" class="uk-width-1-1">
                                             </div>
-                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку доспехов</a>
+                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                             <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
@@ -412,7 +412,7 @@
                                             <div class="uk-card-media-top uk-margin-bottom">
                                                 <img src="images/article_collage_content_6.jpg" alt="" class="uk-width-1-1">
                                             </div>
-                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку доспехов</a>
+                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                             <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
@@ -458,7 +458,7 @@
                                             <div class="uk-card-media-top uk-margin-bottom">
                                                 <img src="images/article_collage_content_8.jpg" alt="" class="uk-width-1-1">
                                             </div>
-                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку доспехов</a>
+                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                             <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
@@ -504,7 +504,7 @@
                                             <div class="uk-card-media-top uk-margin-bottom">
                                                 <img src="images/article_collage_content_10.jpg" alt="" class="uk-width-1-1">
                                             </div>
-                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку доспехов</a>
+                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                             <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
@@ -550,7 +550,7 @@
                                             <div class="uk-card-media-top uk-margin-bottom">
                                                 <img src="images/article_collage_content_12.jpg" alt="" class="uk-width-1-1">
                                             </div>
-                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку доспехов</a>
+                                            <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                             <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
