--- a/src/companions.html
+++ b/src/companions.html
@@ -195,7 +195,7 @@
 
                         <div class="uk-navbar-right">
                             <div class="uk-navbar-item uk-visible@s">
-                                <a href="#" class="uk-button uk-button-small uk-button-orange">Авиабилеты</a>
+                                <a href="#" class="uk-button uk-button-small uk-button-orange uk-text-untransformed">Авиабилеты</a>
                             </div>
                             <ul class="uk-navbar-nav">
                                 <li>
