--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
 
                         <div class="uk-navbar-right">
                             <div class="uk-navbar-item uk-visible@s">
-                                <a href="#" class="uk-button uk-button-small uk-button-orange">Авиабилеты</a>
+                                <a href="#" class="uk-button uk-button-small uk-button-orange uk-text-untransformed">Авиабилеты</a>
                             </div>
                             <ul class="uk-navbar-nav">
                                 <li>
@@ -704,7 +704,7 @@
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
                                         <span>Пушкин — Россия</span>
                                     </div>
-                                    <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку доспехов</a>
+                                    <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                     <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                 </div>
 
@@ -738,7 +738,7 @@
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
                                         <span>Пушкин — Россия</span>
                                     </div>
-                                    <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку доспехов</a>
+                                    <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                     <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                 </div>
 
@@ -772,7 +772,7 @@
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
                                         <span>Пушкин — Россия</span>
                                     </div>
-                                    <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку доспехов</a>
+                                    <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                     <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                 </div>
 
@@ -806,7 +806,7 @@
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
                                         <span>Пушкин — Россия</span>
                                     </div>
-                                    <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку доспехов</a>
+                                    <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку <br> доспехов</a>
                                     <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                 </div>
 
