login form and search form header adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
                                     <a href="#">
                                         <i class="fa fa-search" aria-hidden="true"></i>
                                     </a>
-                                    <div class="uk-navbar-dropdown"
+                                    <div class="uk-navbar-dropdown uk-padding-remove-horizontal"
                                          uk-drop="mode: click; boundary: !header; boundary-align: true; pos: bottom-justify;">
                                         <div class="uk-container">
                                             <form action="/" class="tm-search-header uk-width-xxlarge uk-margin-auto">
