10 photo fix layout

--- a/src/photo.html
+++ b/src/photo.html
@@ -223,7 +223,7 @@
 
                     <!--Photo-->
                     <div>
-                        <div class="uk-child-width-expand@m uk-margin-bottom uk-grid-small" uk-grid>
+                        <div class="tm-grid-small uk-child-width-expand@m uk-margin-bottom" uk-grid>
                             <div class="uk-width-1-2@m uk-width-auto@l">
                                 <h2 class="uk-text-uppercase">Фото стран, городов и курортов</h2>
                                 <div class="uk-position-relative">
@@ -242,7 +242,7 @@
 
                             <div>
                                 <div class="uk-margin-bottom">
-                                    <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
+                                    <div class="tm-grid-small uk-child-width-1-2@s" uk-grid>
                                         <div>
                                             <h3>10 лучших фото</h3>
                                         </div>
@@ -264,7 +264,7 @@
                                     </div>
                                 </div>
 
-                                <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
+                                <div class="tm-grid-small uk-child-width-1-2@s" uk-grid>
                                     <div>
                                         <img src="images/photo_collage_header_medium_1.jpg" alt="" class="uk-width-1-1">
                                     </div>
@@ -272,7 +272,7 @@
                                         <img src="images/photo_collage_header_medium_2.jpg" alt="" class="uk-width-1-1">
                                     </div>
                                     <div>
-                                        <div class="uk-child-width-1-2 uk-grid-small" uk-grid>
+                                        <div class="tm-grid-small uk-child-width-1-2" uk-grid>
                                             <div>
                                                 <img src="images/photo_collage_header_small_1.jpg" alt=""
                                                      class="uk-width-1-1">
@@ -292,7 +292,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="uk-child-width-1-2 uk-grid-small" uk-grid>
+                                        <div class="tm-grid-small uk-child-width-1-2" uk-grid>
                                             <div>
                                                 <img src="images/photo_collage_header_small_3.jpg" alt=""
                                                      class="uk-width-1-1">
