+ В мобильной версии (7-10 айфоны смотрел) https://clip2net.com/s/3XyPuHK самый нижний блок про 20 новых страниц немного кривовато отображаются строки
Поиск попутчиков
+/- В фильтре поле «Поиск по тексту» шире сделать, как в макете. И уберите пожалуйста поле откуда, будет только поле КУДА.

+ ПОД слайдером в основной части странице есть три кнопки: Все страны, Попутчики из городов, По интересам  -   нужно в этих кнопках на один пиксель сдвинуть текст пониже https://clip2net.com/s/3XyT8qd  только на 1 пиксель!

+/- (кнопка ответить на нашем макете внутри серого фона) Сделать в объявлениях покомпактнее чтоб элементы располагались как в макете: https://clip2net.com/s/3XyTF6x  в частности кнопки ПОПУЧТКИ по интересам в один ряд должны быть точно, и иконки социальных сетей поближе друг к другу

сейчас так: https://clip2net.com/s/3XyTrtZ

- (отсутсвует в макете) И упустили в строке «Развернуть» про Источник момент должен быть https://clip2net.com/s/3XyTU1f

Добавление объявления о поиске попутчиков

+ В поле текст объявления сейчас с середины поля текст начинает писаться https://clip2net.com/s/3XyUc4A а нужно чтоб скраю
Блоги
+ В филь те сделать чуть по шире поле поиска сейчас совсем узкое, как в матке постарайтесь https://clip2net.com/s/3XyUMCg

--- a/src/companions-add-listings.html
+++ b/src/companions-add-listings.html
@@ -562,11 +562,9 @@
                                 <hr>
 
                                 <div class="uk-margin">
-                                    <label class="uk-form-label" for="form-textarea">Текст объявления (максимум 600 наков)</label>
+                                    <label class="uk-form-label" for="form-textarea">Текст объявления (максимум 600 знаков)</label>
                                     <div class="uk-form-controls">
-                                        <textarea name="form-textarea" id="form-textarea" rows="10" class="uk-textarea"
-                                                  maxlength="600">
-                                        </textarea>
+                                        <textarea name="form-textarea" id="form-textarea" rows="10" class="uk-textarea" maxlength="600"></textarea>
                                     </div>
                                 </div>
 
