--- a/src/blogs.html
+++ b/src/blogs.html
@@ -264,10 +264,10 @@
 
                                         </div>
 
-                                        <div class="uk-width-auto@l">
+                                        <div class="uk-width-1-3@l">
 
                                             <!-- Search form -->
-                                            <form action="/" class="uk-search uk-padding-small uk-padding-remove-horizontal">
+                                            <form action="/" class="uk-search uk-padding-small uk-padding-remove-horizontal uk-width-1-1">
                                                 <div class="uk-flex">
                                                     <input class="uk-input" type="search" placeholder="Поиск по блогам">
                                                     <a href="#" class="uk-button uk-button-small uk-button-blue">
