--- a/src/companions.html
+++ b/src/companions.html
@@ -270,21 +270,21 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div>
-                                        <div class="uk-form-controls uk-inline uk-width-1-1">
-                                            <span class="uk-form-icon">
-                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                            </span>
-                                            <span class="uk-form-icon uk-form-icon-flip">
-                                                <i class="fa fa-angle-down" aria-hidden="true"></i>
-                                            </span>
-                                            <select class="uk-select">
-                                                <option>Откуда</option>
-                                                <option>Город</option>
-                                                <option>Город</option>
-                                            </select>
-                                        </div>
-                                    </div>
+                                    <!--<div>-->
+                                        <!--<div class="uk-form-controls uk-inline uk-width-1-1">-->
+                                            <!--<span class="uk-form-icon">-->
+                                                <!--<i class="fa fa-map-marker" aria-hidden="true"></i>-->
+                                            <!--</span>-->
+                                            <!--<span class="uk-form-icon uk-form-icon-flip">-->
+                                                <!--<i class="fa fa-angle-down" aria-hidden="true"></i>-->
+                                            <!--</span>-->
+                                            <!--<select class="uk-select">-->
+                                                <!--<option>Откуда</option>-->
+                                                <!--<option>Город</option>-->
+                                                <!--<option>Город</option>-->
+                                            <!--</select>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
                                     <div>
                                         <div class="uk-form-controls uk-inline uk-width-1-1">
                                             <span class="uk-form-icon">
@@ -300,7 +300,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="uk-width-expand uk-width-auto@l">
+                                    <div class="uk-width-1-4@l">
                                         <div class="uk-form-controls uk-inline uk-width-1-1">
                                             <span class="uk-form-icon">
                                                 <i class="fa fa-search" aria-hidden="true"></i>
@@ -448,8 +448,8 @@
                                     <li>
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
-                                                <div class="uk-width-1-4@s">
-                                                    <div class="uk-padding uk-padding-remove-top uk-text-center">
+                                                <div class="uk-width-auto@s">
+                                                    <div class="uk-text-center">
                                                         <img src="images/avatar_137x137_1.png" alt=""
                                                              class="uk-border-circle">
                                                         <h5 class="uk-margin-small-top uk-margin-remove-bottom">Мария</h5>
@@ -540,8 +540,8 @@
                                     <li>
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
-                                                <div class="uk-width-1-4@s">
-                                                    <div class="uk-padding uk-padding-remove-top uk-text-center">
+                                                <div class="uk-width-auto@s">
+                                                    <div class="uk-text-center">
                                                         <img src="images/avatar_137x137_2.png" alt=""
                                                              class="uk-border-circle">
                                                         <h5 class="uk-margin-small-top uk-margin-remove-bottom">Мария</h5>
@@ -633,8 +633,8 @@
                                     <li>
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
-                                                <div class="uk-width-1-4@s">
-                                                    <div class="uk-padding uk-padding-remove-top uk-text-center">
+                                                <div class="uk-width-auto@s">
+                                                    <div class="uk-text-center">
                                                         <img src="images/avatar_137x137_3.png" alt=""
                                                              class="uk-border-circle">
                                                         <h5 class="uk-margin-small-top uk-margin-remove-bottom">Мария</h5>
@@ -726,8 +726,8 @@
                                     <li>
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
-                                                <div class="uk-width-1-4@s">
-                                                    <div class="uk-padding uk-padding-remove-top uk-text-center">
+                                                <div class="uk-width-auto@s">
+                                                    <div class="uk-text-center">
                                                         <img src="images/avatar_137x137_4.png" alt=""
                                                              class="uk-border-circle">
                                                         <h5 class="uk-margin-small-top uk-margin-remove-bottom">Мария</h5>
@@ -819,8 +819,8 @@
                                     <li>
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
-                                                <div class="uk-width-1-4@s">
-                                                    <div class="uk-padding uk-padding-remove-top uk-text-center">
+                                                <div class="uk-width-auto@s">
+                                                    <div class="uk-text-center">
                                                         <img src="images/avatar_137x137_5.png" alt=""
                                                              class="uk-border-circle">
                                                         <h5 class="uk-margin-small-top uk-margin-remove-bottom">Мария</h5>
@@ -913,8 +913,8 @@
                                     <li>
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
-                                                <div class="uk-width-1-4@s">
-                                                    <div class="uk-padding uk-padding-remove-top uk-text-center">
+                                                <div class="uk-width-auto@s">
+                                                    <div class="uk-text-center">
                                                         <img src="images/avatar_137x137_6.png" alt=""
                                                              class="uk-border-circle">
                                                         <h5 class="uk-margin-small-top uk-margin-remove-bottom">Мария</h5>
@@ -1008,8 +1008,8 @@
                                     <li>
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
-                                                <div class="uk-width-1-4@s">
-                                                    <div class="uk-padding uk-padding-remove-top uk-text-center">
+                                                <div class="uk-width-auto@s">
+                                                    <div class="uk-text-center">
                                                         <img src="images/avatar_137x137_7.png" alt=""
                                                              class="uk-border-circle">
                                                         <h5 class="uk-margin-small-top uk-margin-remove-bottom">Мария</h5>
