--- a/src/companions-add-listings.html
+++ b/src/companions-add-listings.html
@@ -804,7 +804,7 @@
                 <div class="uk-container uk-text-center">
                     <div class="uk-width-4-5@l uk-margin-auto">
                         <h2>Поиск попутчиков в путешествие</h2>
-                        <p>Мало кто целенаправленно стремится провести отпуск в одиночестве, чаще всего такая не
+                        <p class="tm-line-height-big">Мало кто целенаправленно стремится провести отпуск в одиночестве, чаще всего такая не
                             радужная перспектива возникает непредвиденно – если, например, друзей, с которыми вы
                             планировали совершить поездку, не отпускают с работы, или они не хотят ехать в страну,
                             куда мечтаете отправиться вы. И как же быть в такой непростой ситуации, когда отпуск на
