--- a/src/airlines.html
+++ b/src/airlines.html
@@ -16,7 +16,7 @@
         <div>
 
             <!-- Pageheader -->
-            <div class="tm-pageheader tm-pageheader-companions uk-section uk-padding-remove uk-light">
+            <div class="tm-pageheader tm-pageheader-airlines uk-section uk-padding-remove uk-light">
 
                 <!--Header-->
                 <header class="uk-navbar-container uk-position-relative">
@@ -215,76 +215,22 @@
 
                 <div class="uk-section uk-section-large uk-position-relative uk-padding-remove-bottom">
                     <div class="uk-container uk-text-center">
-                        <h1>Поиск попутчиков на отдых</h1>
+                        <h1>Авиакомпании</h1>
 
-                        <!-- Search for travel companions (Pageheader) -->
-                        <div class="uk-margin-xlarge-bottom">
+                        <!-- Search for airlines (Pageheader) -->
+                        <div class="uk-width-xxlarge uk-margin-xlarge-bottom uk-margin-auto">
                             <form action="/" class="tm-form-pageheader">
-                                <div class="tm-grid-divider uk-child-width-expand@s uk-grid-collapse" uk-grid>
-                                    <div class="uk-width-1-4@s uk-width-expand@m">
+                                <div class="tm-grid-divider uk-child-width-1-4@s uk-grid-collapse" uk-grid>
+                                    <div class="uk-width-1-2@s">
                                         <div class="uk-form-controls uk-inline uk-width-1-1">
-                                            <span class="uk-form-icon uk-form-icon-flip">
-                                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                            <span class="uk-form-icon">
+                                                <i class="fa fa-search" aria-hidden="true"></i>
                                             </span>
-                                            <select class="uk-select">
-                                                <option>Ищу</option>
-                                                <option>Девушку</option>
-                                                <option>Парня</option>
-                                            </select>
+
+                                            <input class="uk-input" type="search" placeholder="Поиск по названию">
                                         </div>
                                     </div>
-                                    <div class="uk-width-1-4@s uk-width-expand@m">
-                                        <div class="uk-form-controls uk-inline uk-width-1-1">
-                                            <span class="uk-form-icon uk-form-icon-flip">
-                                                <i class="fa fa-angle-down" aria-hidden="true"></i>
-                                            </span>
-                                            <select class="uk-select">
-                                                <option>Возраст</option>
-                                                <option>20 - 30 лет</option>
-                                                <option>30 - 40 лет</option>
-                                                <option>более 40 лет</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="uk-width-1-2@s uk-width-1-4@m">
-                                        <div class="uk-child-width-1-2 uk-grid-collapse" uk-grid>
-                                            <div>
-                                                <div class="uk-form-controls uk-inline uk-width-1-1">
-                                                <span class="uk-form-icon">
-                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                                                </span>
-                                                    <input class="uk-input" type="text"
-                                                           placeholder="19.05.2017"
-                                                           datepicker>
-                                                </div>
-                                            </div>
-                                            <div>
-                                                <div class="uk-form-controls uk-inline uk-width-1-1">
-                                                <span class="uk-form-icon">
-                                                    <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                                                </span>
-                                                    <input class="uk-input" type="text"
-                                                           placeholder="19.06.2017"
-                                                           datepicker>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!--<div>-->
-                                    <!--<div class="uk-form-controls uk-inline uk-width-1-1">-->
-                                    <!--<span class="uk-form-icon">-->
-                                    <!--<i class="fa fa-map-marker" aria-hidden="true"></i>-->
-                                    <!--</span>-->
-                                    <!--<span class="uk-form-icon uk-form-icon-flip">-->
-                                    <!--<i class="fa fa-angle-down" aria-hidden="true"></i>-->
-                                    <!--</span>-->
-                                    <!--<select class="uk-select">-->
-                                    <!--<option>Откуда</option>-->
-                                    <!--<option>Город</option>-->
-                                    <!--<option>Город</option>-->
-                                    <!--</select>-->
-                                    <!--</div>-->
-                                    <!--</div>-->
+
                                     <div>
                                         <div class="uk-form-controls uk-inline uk-width-1-1">
                                             <span class="uk-form-icon">
@@ -294,26 +240,23 @@
                                                 <i class="fa fa-angle-down" aria-hidden="true"></i>
                                             </span>
                                             <select class="uk-select">
-                                                <option>Куда</option>
+                                                <option>Страна</option>
                                                 <option>Город</option>
                                                 <option>Город</option>
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="uk-width-1-4@l">
-                                        <div class="uk-form-controls uk-inline uk-width-1-1">
-                                            <span class="uk-form-icon">
-                                                <i class="fa fa-search" aria-hidden="true"></i>
-                                            </span>
 
-                                            <input class="uk-input" type="search" placeholder="Поиск по тексту">
+                                    <div>
+                                        <div class="uk-form-controls">
+                                            <input class="uk-input" type="text" placeholder="Код ИАТА">
                                         </div>
                                     </div>
+
+
                                 </div>
+
                                 <div class="uk-form-controls uk-flex-center uk-margin-medium-top" uk-grid>
-                                    <div>
-                                        <a href="" class="uk-button uk-button-large uk-button-orange">Добавить объявление</a>
-                                    </div>
                                     <div>
                                         <a href="" class="uk-button uk-button-large uk-button-blue">Найти</a>
                                     </div>
@@ -570,7 +513,7 @@
                                 <li><a href="#"><span uk-pagination-next></span></a></li>
                             </ul>
 
-                            <!-- Listings Found -->
+                            <!-- Airline reviews -->
                             <div>
                                 <h3>Отзывы об авиакомпаниях</h3>
 
