--- a/src/airlines.html
+++ b/src/airlines.html
@@ -252,11 +252,33 @@
                                             <input class="uk-input" type="text" placeholder="Код ИАТА">
                                         </div>
                                     </div>
-
-
                                 </div>
 
-                                <div class="uk-form-controls uk-flex-center uk-margin-medium-top" uk-grid>
+                                <div class="tm-checkbox-blue uk-grid-small" uk-grid>
+                                    <div>
+                                        <div class="uk-form-controls">
+                                            <input class="uk-hidden" type="checkbox" id="form-checkbox-airline-1"
+                                                   name="form-checkbox-airline">
+                                            <label for="form-checkbox-airline-1" class="tm-checkbox">Компании из Чёрного списка ЕС</label>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="uk-form-controls">
+                                            <input class="uk-hidden" type="checkbox" id="form-checkbox-airline-2"
+                                                   name="form-checkbox-airline">
+                                            <label for="form-checkbox-airline-2" class="tm-checkbox">Компании Прекратившие деятельность</label>
+                                        </div>
+                                    </div>
+                                    <div class="uk-width-expand">
+                                        <div class="uk-form-controls">
+                                            <input class="uk-hidden" type="checkbox" id="form-checkbox-airline-3"
+                                                   name="form-checkbox-airline">
+                                            <label for="form-checkbox-airline-3" class="tm-checkbox">С отзывами</label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="uk-form-controls uk-flex-center uk-grid-small" uk-grid>
                                     <div>
                                         <a href="" class="uk-button uk-button-large uk-button-blue">Найти</a>
                                     </div>
