--- a/src/airlines.html
+++ b/src/airlines.html
@@ -214,8 +214,8 @@
                 </header>
 
                 <div class="uk-section uk-section-large uk-position-relative uk-padding-remove-bottom">
-                    <div class="uk-container uk-text-center">
-                        <h1>Авиакомпании</h1>
+                    <div class="uk-container">
+                        <h1 class="uk-text-center">Авиакомпании</h1>
 
                         <!-- Search for airlines (Pageheader) -->
                         <div class="uk-width-xxlarge uk-margin-xlarge-bottom uk-margin-auto">
@@ -254,7 +254,7 @@
                                     </div>
                                 </div>
 
-                                <div class="tm-checkbox-blue uk-grid-small" uk-grid>
+                                <div class="uk-child-width-auto@s tm-checkbox-blue uk-grid-small" uk-grid>
                                     <div>
                                         <div class="uk-form-controls">
                                             <input class="uk-hidden" type="checkbox" id="form-checkbox-airline-1"
@@ -269,7 +269,7 @@
                                             <label for="form-checkbox-airline-2" class="tm-checkbox">Компании Прекратившие деятельность</label>
                                         </div>
                                     </div>
-                                    <div class="uk-width-expand">
+                                    <div class="uk-width-auto@s uk-width-expand@m">
                                         <div class="uk-form-controls">
                                             <input class="uk-hidden" type="checkbox" id="form-checkbox-airline-3"
                                                    name="form-checkbox-airline">
@@ -298,13 +298,13 @@
                             <div>
                                 <h4>Найдено авиакомпаний: <span>106</span></h4>
 
-                                <table class="tm-airlines-table uk-table uk-table-large uk-table-middle uk-table-responsive uk-table-divider uk-text-medium uk-text-muted">
+                                <table class="tm-airlines-table uk-table uk-table-large uk-table-middle uk-table-responsive uk-table-divider uk-text-medium uk-text-muted uk-text-center">
                                     <thead>
                                     <tr>
-                                        <th>Логотип</th>
-                                        <th class="uk-width-expand">Название</th>
-                                        <th class="uk-text-center">ИАТА</th>
-                                        <th class="uk-text-center">Отзывы</th>
+                                        <th class="uk-text-left@m">Логотип</th>
+                                        <th class="uk-width-expand uk-text-left@m">Название</th>
+                                        <th>ИАТА</th>
+                                        <th>Отзывы</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -312,11 +312,11 @@
                                         <td>
                                             <img src="images/logo_airline_1.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
-                                        <td class="uk-text-center">EI</td>
-                                        <td class="uk-text-center">
+                                        <td>EI</td>
+                                        <td>
                                             <i class="fa fa-comment" aria-hidden="true"></i>
                                             <span>21</span>
                                         </td>
@@ -326,7 +326,7 @@
                                         <td>
                                             <img src="images/logo_airline_2.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -337,7 +337,7 @@
                                         <td>
                                             <img src="images/logo_airline_3.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -351,7 +351,7 @@
                                         <td>
                                             <img src="images/logo_airline_4.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -365,7 +365,7 @@
                                         <td>
                                             <img src="images/logo_airline_1.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -379,7 +379,7 @@
                                         <td>
                                             <img src="images/logo_airline_2.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -390,7 +390,7 @@
                                         <td>
                                             <img src="images/logo_airline_3.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -404,7 +404,7 @@
                                         <td>
                                             <img src="images/logo_airline_4.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -418,7 +418,7 @@
                                         <td>
                                             <img src="images/logo_airline_1.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -432,7 +432,7 @@
                                         <td>
                                             <img src="images/logo_airline_2.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -443,7 +443,7 @@
                                         <td>
                                             <img src="images/logo_airline_3.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -457,7 +457,7 @@
                                         <td>
                                             <img src="images/logo_airline_4.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -471,7 +471,7 @@
                                         <td>
                                             <img src="images/logo_airline_1.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -485,7 +485,7 @@
                                         <td>
                                             <img src="images/logo_airline_2.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -496,7 +496,7 @@
                                         <td>
                                             <img src="images/logo_airline_3.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -510,7 +510,7 @@
                                         <td>
                                             <img src="images/logo_airline_4.jpg" alt="" class="uk-preserve-width">
                                         </td>
-                                        <td>
+                                        <td class="uk-text-left@m">
                                             <a href="#" class="tm-airline-title">748 Air Services (748 Эйр Сервисис)</a>
                                         </td>
                                         <td class="uk-text-center">EI</td>
@@ -836,7 +836,7 @@
 
                                 </div>
 
-                                <div class="uk-width-expand@s  uk-width-1-1@m">
+                                <div>
 
                                     <!--News list-->
                                     <div class="tm-news-small">
